--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
@@ -169,6 +169,8 @@ $(document).ready(function() {
 			},
 			success: function(resp){
 				console.log("创建成功");
+				href = "/apps/shvote/shvote_registrators/?id={{id}}";
+				window.location.href = href;
 			},
 			error: function(error){
 				console.log('创建失败');
