--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -370,7 +370,7 @@
 </div>
 
 <script type="text/plain" id="tpl">
-	<div class="wui-rank-item wa-rank-item" data-id={ result_list_member_id }>
+	<div class="wui-rank-item wa-rank-item" data-id={ id }>
 		<div class="wui-item-content">
 			<div class="wui-rank-pic wa-rank-pic">
 				<img src={ result_list_icon }>
@@ -383,7 +383,7 @@
 				<div class="wui-rank-voteLef wa-vote-left">
 					<span>{ result_list_count }</span>票
 				</div>
-				<div class="wui-rank-voteRig wa-ivote" data-member="{ member_id }">
+				<div class="wui-rank-voteRig wa-ivote" data-id="{ member_id }">
 					<button type="button" class="wui-vote-btn">投票</button>
 				</div>
 			</div> 
@@ -605,7 +605,7 @@
 		                result_list_count : result[i].count,
 		                result_list_icon : result[i].icon,
 		                member_id : result[i].member_id,
-		                result_list_member_id : result[i].member_id
+		                id : result[i].id
 		            });   
 		        $('.wa-rank-list').append(s);
 	        	}
@@ -620,9 +620,9 @@
     查看选手详情
      */
 	$('body').delegate('.wa-rank-pic', 'click', function(event) {
-		var member_id = $(event.target).parents('.wa-rank-item').data('id');
+		var id = $(event.target).parents('.wa-rank-item').data('id');
 		for(var i=0;i<user_detail.length;i++){
-			if(user_detail[i].member_id == member_id){
+			if(user_detail[i].id == id){
 				var icon = user_detail[i].icon;
 				var name = user_detail[i].name;
 				var count = user_detail[i].count;
@@ -634,7 +634,7 @@
 				$('.wa-detail-serial-number').text('编号: ' + serial_number);
 				$('.wa-detail-vote-count span').text(count);
 				$('.wa-detail-bottom').text(details);
-				for (var i=0;i<pics.length;i++){
+				for (var j=0;j<pics.length;j++){
 					$('.wa-detail-bottom').append('<img src='+pics[i]+'>');
 				}
 			}
