分享积分的第二个版本

--- a/weapp/mall/templates/mall/editor/edit_expired_time.html
+++ b/weapp/mall/templates/mall/editor/edit_expired_time.html
@@ -23,7 +23,7 @@
 				<div class="errorHint" style="margin-top: 10px;margin-left: 90px;"></div>
 			</div>
 			<div>
-				<p>2.&nbsp;&nbsp;<input type="checkbox" class="xa-switchShare" style="">订单提交成功后提示分享赚积分：<span class="c9">（注：开启前请确认首页-积分规则已正确设置）</span></p>
+				<p>2.&nbsp;&nbsp;<input type="checkbox" class="xa-switchShare" style="" name="isShowPage">订单提交成功后提示分享赚积分：<span class="c9">（注：开启前请确认首页-积分规则已正确设置）</span></p>
 				<!-- <div class="xa-setShareSection xui-setShareSection">
 					<div class="xui-panel">
 						<div class="xui-i-title"><label class="mr10">上传弹层背景图片</label><span class="c6 f12">格式：建议jpg,png 尺寸：500*680 不超过1M</span></div>
@@ -47,7 +47,7 @@
 						<tr>
 							<td>选择要分享的图文：<br/><span class="c9">（仅显示正文内容）</span></td>
 							<td>
-								
+
 							</td>
 						</tr>
 						<tr>
@@ -67,7 +67,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="xui-btn-group tc">  
+			<div class="xui-btn-group tc">
 				<input type="submit" class="btn btn-primary" id="submitBtn" value="保存" />
 			</div>
 		</section>
