--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_registrators.html
@@ -138,7 +138,7 @@
 						<a href="javascript:void(0);" class="ml5 xa-review">审核通过</a>
 						<a href="javascript:void(0);" class="ml5 xa-delete">删除</a>
 					{{/if}}
-					<a href="javascript:void(0);" class="ml5 xa-viewData">查看</a>
+					<a href="/apps/shvote/shvote_create_player/?id=${item.activity_id}&player_id=${item.id}" class="ml5">查看</a>
 				</td>
 			</tr>
 			{{/each}}
