--- a/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
+++ b/weapp/apps/customerized_apps/shvote/templates/editor/shvote_create_player.html
@@ -88,6 +88,56 @@
 			<li class="active">微信投票</li>
 		</ul>
 	</div>
+	<!--查看选手-->
+	{% if cur_player_info %}
+	<div class="panel panel-default wui-create-player">
+		<div class="wui-create">选手详情</div>
+		<img class="wui-upload-img wa-upload-img" src="{{cur_player_info.icon}}" style="display:block">
+		<div class="form-group wui-upload-img-div">
+			<label class="control-label fl" for="swipe_images">上传头像</label>
+			<div id="imgSelect" class="col-sm-9">
+		        <input id="swipe_images" name="swipe_images" type='hidden' />
+			</div>
+		</div>
+		<div class="form-group">
+			<label class="control-label fl" for="player_name">名称</label>
+			<input type="text" class="form-control" name="player_name" id="player_name" value="{{cur_player_info.name}}"/>
+		</div>
+		<div class="form-group">
+			<label class="control-label fl" for="group">选择分组</label>
+			<select id="group" name="group" class="form-control">
+				<option>{{cur_player_info.group}}</option>
+			</select>
+		</div>
+		<div class="form-group">
+			<label class="control-label fl" for="serial_number">输入编号</label>
+			<input type="text" class="form-control" name="serial_number" id="serial_number" value="{{cur_player_info.serial_number}}"/>
+		</div>
+		<div class="form-group">
+			<label class="control-label" for="details">详情</label>
+			<!-- <span class="xui-fontGary" style="font-weight: lighter;">（上传图片要求宽度在480-620之间,高度小于等于960,大小不超过500K）</span> -->
+			<textarea class="wui-details" id="details" name="details">
+				{{cur_player_info.details}}
+			</textarea>
+		</div>
+		<div class="form-group wui-upload-img-div">
+			<label class="control-label fl" for="swipe_images_des">上传图片</label>
+			<div id="imgSelect" class="col-sm-9">
+		        <input id="swipe_images_des" name="swipe_images_des" type='hidden' />
+			</div>
+		</div>
+		<div class="wui-img-container wa-img-container">
+			{% for src in cur_player_info.pics %}
+			<img class="wui-upload-img-des wa-upload-img-des" src="{{src}}">'
+			{% endfor %}
+		</div>
+		<div class="wui-btn-container">
+<!-- 			<button class="btn btn-primary wui-submit wa-submit">提交</button> -->
+			<button class="btn btn-primary">取消</button>
+		</div>
+	</div>
+	<!--创建选手-->
+	{% else %}
 	<div class="panel panel-default wui-create-player">
 		<div class="wui-create">创建选手</div>
 		<img class="wui-upload-img wa-upload-img" src="">
@@ -130,16 +180,13 @@
 			<button class="btn btn-primary wui-submit wa-submit">提交</button>
 			<button class="btn btn-primary">取消</button>
 		</div>
-		
 	</div>
+	{% endif %}
 </div>
 {% endblock %}
 
 
 {% block js %}
-{{ "shvote"|load_app_views_and_dialogs|safe }}
-{% verbatim %}
-{% endverbatim %}
 
 <script type="text/javascript">
 $(document).ready(function() {
@@ -201,89 +248,87 @@ $(document).ready(function() {
             xlog(file.name);
         };
 
-    $(function(){
-    	//初始化上传组件
-        $("#swipe_images").uploadify({
-            overrideEvents: overrideEvents,
-            swf: swf,
-            width: width,
-            height: height,
-            multi: multi,
-            removeCompleted: removeCompleted,
-            uploader: uploader,
-            cancelImg: cancelImg,
-            buttonText: buttonText,
-            fileTypeDesc: '上传头像',
-            fileTypeExts: fileTypeExts,
-            method: method,
-            removeTimeout: removeTimeout,
-            formData: $.extend(formData, {
-                'cat': 'swipe_images'
-            }),
-            onUploadStart: function(file){
-                if(file && file.name.substring(file.name.length - 3,file.name.length) == 'jpg'){}else{
-                    W.showHint('error', '请上传jpg类型的图片');
-                    $("#swipe_images").uploadify('cancel', '*');
-                    $("#swipe_images").uploadify('stop');
-                }
-            },
-            onUploadSuccess : function(file, response, status) {
-                response = JSON.parse(response);
-                if(response.code == 200){
-                    $('.wa-upload-img').attr('src',response.data).show().css('display','inline-block');
-                }else{
-                     W.showHint('error', response.errMsg);
-                }
-            },
-            onSelect: function(file) {
-                var $queues = $('#swipe_images-queue').children();
-                if($queues.length > 1){
-                    $queues.eq(0).remove();
-                }
-            },
-            onError: onError
-        });
-        $("#swipe_images_des").uploadify({
-            overrideEvents: overrideEvents,
-            swf: swf,
-            width: width,
-            height: height,
-            multi: multi,
-            removeCompleted: removeCompleted,
-            uploader: uploader,
-            cancelImg: cancelImg,
-            buttonText: buttonText,
-            fileTypeDesc: '上传图片',
-            fileTypeExts: fileTypeExts,
-            method: method,
-            removeTimeout: removeTimeout,
-            formData: $.extend(formData, {
-                'cat': 'swipe_images_des'
-            }),
-            onUploadStart: function(file){
-                if(file && file.name.substring(file.name.length - 3,file.name.length) == 'jpg'){}else{
-                    W.showHint('error', '请上传jpg类型的图片');
-                    $("#swipe_images_des").uploadify('cancel', '*');
-                    $("#swipe_images_des").uploadify('stop');
-                }
-            },
-            onUploadSuccess : function(file, response, status) {
-                response = JSON.parse(response);
-                if(response.code == 200){
-                    $('.wa-img-container').append('<img class="wui-upload-img-des wa-upload-img-des" src='+response.data+'>')
-                }else{
-                     W.showHint('error', response.errMsg);
-                }
-            },
-            onSelect: function(file) {
-                var $queues = $('#swipe_images-queue').children();
-                if($queues.length > 1){
-                    $queues.eq(0).remove();
-                }
-            },
-            onError: onError
-        });
-    })
+	//初始化上传组件
+    $("#swipe_images").uploadify({
+        overrideEvents: overrideEvents,
+        swf: swf,
+        width: width,
+        height: height,
+        multi: multi,
+        removeCompleted: removeCompleted,
+        uploader: uploader,
+        cancelImg: cancelImg,
+        buttonText: buttonText,
+        fileTypeDesc: '上传头像',
+        fileTypeExts: fileTypeExts,
+        method: method,
+        removeTimeout: removeTimeout,
+        formData: $.extend(formData, {
+            'cat': 'swipe_images'
+        }),
+        onUploadStart: function(file){
+            if(file && file.name.substring(file.name.length - 3,file.name.length) == 'jpg'){}else{
+                W.showHint('error', '请上传jpg类型的图片');
+                $("#swipe_images").uploadify('cancel', '*');
+                $("#swipe_images").uploadify('stop');
+            }
+        },
+        onUploadSuccess : function(file, response, status) {
+            response = JSON.parse(response);
+            if(response.code == 200){
+                $('.wa-upload-img').attr('src',response.data).show().css('display','inline-block');
+            }else{
+                 W.showHint('error', response.errMsg);
+            }
+        },
+        onSelect: function(file) {
+            var $queues = $('#swipe_images-queue').children();
+            if($queues.length > 1){
+                $queues.eq(0).remove();
+            }
+        },
+        onError: onError
+    });
+    $("#swipe_images_des").uploadify({
+        overrideEvents: overrideEvents,
+        swf: swf,
+        width: width,
+        height: height,
+        multi: multi,
+        removeCompleted: removeCompleted,
+        uploader: uploader,
+        cancelImg: cancelImg,
+        buttonText: buttonText,
+        fileTypeDesc: '上传图片',
+        fileTypeExts: fileTypeExts,
+        method: method,
+        removeTimeout: removeTimeout,
+        formData: $.extend(formData, {
+            'cat': 'swipe_images_des'
+        }),
+        onUploadStart: function(file){
+            if(file && file.name.substring(file.name.length - 3,file.name.length) == 'jpg'){}else{
+                W.showHint('error', '请上传jpg类型的图片');
+                $("#swipe_images_des").uploadify('cancel', '*');
+                $("#swipe_images_des").uploadify('stop');
+            }
+        },
+        onUploadSuccess : function(file, response, status) {
+            response = JSON.parse(response);
+            if(response.code == 200){
+                $('.wa-img-container').append('<img class="wui-upload-img-des wa-upload-img-des" src='+response.data+'>')
+            }else{
+                 W.showHint('error', response.errMsg);
+            }
+        },
+        onSelect: function(file) {
+            var $queues = $('#swipe_images-queue').children();
+            if($queues.length > 1){
+                $queues.eq(0).remove();
+            }
+        },
+        onError: onError
+    });
 });
 </script>
 {% endblock %}
