--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -268,13 +268,14 @@
         line-height: 1.5rem;
 	}
 	.wui-detail-close{
-		display: none;
-		position: absolute;
+		background-image:url('/static_v2/img/shvote_close.png');
+		width:67px;
+		height:67px;
+		z-index:999999999;
+		position:absolute;
 		top: 3%;
 		right: 6%;
-		cursor: pointer;
-	    z-index: 999999999;
-	    width: 10%;
+		display: none;
 	}
 	p.wui-noborder{
 		border: none;
@@ -403,8 +404,8 @@
 		</div>
 	</div>
 </script>
-<div>	
-	<img class="wui-detail-close wa-detail-close" src="/static_v2/img/shvote_close.png">
+<div>
+	<div class="wui-detail-close wa-detail-close"></div>	
 	<div id="userDetailDialog" class="wui-detail-dialog">
 		<div class="wui-detail-top">
 			<div class="wui-detail-user wa-detail-user">
