--- a/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
+++ b/weapp/apps/customerized_apps/shvote/templates/webapp/m_shvote.html
@@ -649,7 +649,7 @@
 				$('.wa-detail-vote-count span').text(count);
 				$('.wa-detail-bottom').text(details);
 				for (var j=0;j<pics.length;j++){
-					$('.wa-detail-bottom').append('<img src='+pics[i]+'>');
+					$('.wa-detail-bottom').append('<img src='+pics[j]+'>');
 				}
 			}
 		}
