Bar_code -> User_Code

--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -275,7 +275,7 @@
             var product_price = product_dict.productPrice;
             var product_socks = product_dict.productSocks;
             var product_sales = product_dict.productSales;
-            var product_barcode = product_dict.productBarcode;
+            var product_usercode = product_dict.productUsercode;
             var product_create_at = product_dict.productCreate_at;
 
             var group_dict = {};
@@ -304,7 +304,7 @@
             'product_price':product_price,
             'product_socks':product_socks,
             'product_sales':product_sales,
-            'product_barcode':product_barcode,
+            'product_usercode':product_usercode,
             'product_create_at':product_create_at,
             'rules':rules,
             'material_image':material_image,
