--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -96,6 +96,10 @@
             border: 1px solid #CBCBCB;
             color: #999999;
         }
+
+        #start_time,#end_time{
+          cursor: pointer;
+        }
     </style>
 {% endblock %}
 {% block content-panel %}
