--- a/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
@@ -170,7 +170,7 @@
 		  {{each(i, item) items}}
 			<tr data-id="${item.id}">
 				<td>
-					<a href="/member/detail/?id=${item.member_id}">{{html item.group_leader_name}}</a>
+					<a href="/member/detail/?id=${item.member_id}"  target="_blank">{{html item.group_leader_name}}</a>
 				</td>
 				<td >
 					{{if (item.status === '团购进行中')}}
