--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -291,7 +291,7 @@
 				</td>
 				<td>
 					<div class="xui-group_detail">
-						<a href="/apps/group/group_participances/?id=${item.id}" class="ml5">参团详情</a>
+						<a href="/apps/group/group_participances/?id=${item.id}" class="ml5" style="margin-left: 0px !important;">参团详情</a>
 					</div>
 					<div class="xui-group_action">
 						{{if (item.handle_status === 0)}}
