--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -19,6 +19,7 @@
 	}
 	table.xui-groups td .xui-productNameBox{
 		width: 140px;
+		vertical-align: middle;
 		display: inline-block;
 	}
 	table.xui-groups tr.xui-product_itle{
